@@ -27,22 +27,26 @@ struct parse_t {
 
 	parse_t(val_t _val, parse_t arg1 = parse_t(),
 	                    parse_t arg2 = parse_t(),
-	                    parse_t arg3 = parse_t())
+	                    parse_t arg3 = parse_t(),
+	                    parse_t arg4 = parse_t())
 	: val(_val), args(), op(' ')
 	{
 		if ( arg1.op!='~' ) args.push_back(arg1);
 		if ( arg2.op!='~' ) args.push_back(arg2);
 		if ( arg3.op!='~' ) args.push_back(arg3);
+		if ( arg4.op!='~' ) args.push_back(arg4);
 	};
 
 	parse_t(char _op, parse_t arg1 = parse_t(),
 	                  parse_t arg2 = parse_t(),
-	                  parse_t arg3 = parse_t())
+	                  parse_t arg3 = parse_t(),
+	                  parse_t arg4 = parse_t())
 	: val(), args(), op(_op)
 	{
 		if ( arg1.op!='~' ) args.push_back(arg1);
 		if ( arg2.op!='~' ) args.push_back(arg2);
 		if ( arg3.op!='~' ) args.push_back(arg3);
+		if ( arg4.op!='~' ) args.push_back(arg4);
 	}
 
 	const val_t& name()  const { return val; }
